<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/jobType"
        android:layout_width="301dp"
        android:layout_height="99dp"
        android:entries="@array/job_type_values"
        app:layout_constraintBottom_toTopOf="@+id/lowestSalary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/highestSalary"
        android:layout_width="184dp"
        android:layout_height="57dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Highest Salary"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/place"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/lowestSalary"
        android:layout_width="182dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="Lowest Salary"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/highestSalary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/highestSalary" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:hint="Duration"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/employeeSetPreferenceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/place"
        android:layout_width="147dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Place"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/employeeSetPreferenceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />


</android.support.constraint.ConstraintLayout>